--- a/Auriculoterapia/app/src/main/res/values/strings.xml
+++ b/Auriculoterapia/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <!--Strings menu principal y citas-->
     <string name="app_name">Auriculoterapia</string>
     <string name="registrar_cita">Registrar cita</string>
     <string name="appointment_state">Estado de citas</string>
@@ -10,4 +12,9 @@
     <string name="time_hint">Seleccione la hora</string>
     <string name="attention_text">Tipo de\natención</string>
     <string name="register_appointment_button">Reservar</string>
+    <!---->
+
+
+
+
 </resources>
