--- a/Auriculoterapia/app/src/main/res/values/strings.xml
+++ b/Auriculoterapia/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <!--Strings menu principal y citas-->
     <string name="app_name">Auriculoterapia</string>
-    <string name="registrar_cita">Registro</string>
+    <string name="registrar_cita">Reserva</string>
     <string name="appointment_state">Estado</string>
     <string name="appointment_availability">Mi disponibilidad</string>
     <string name="patient_text">Paciente</string>
@@ -46,4 +46,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="num_celular_text">Celular</string>
     <string name="registrar_button_main">Registrar</string>
+    <string name="buscar_paciente">Buscar paciente</string>
+    <string name="answer_button">Responder</string>
+    <string name="history_button">Historial</string>
+    <string name="seleccionar_tratamiento">Seleccionar\ntratamiento</string>
+    <string name="fecha_de_tratamiento_text">Fecha de\ntratamiento</string>
+    <string name="frecuencia_diaria">Frecuencia\ndiaria</string>
+    <string name="save_text">Guardar</string>
+    <string name="cancel_text">Cancelar</string>
 </resources>
