--- a/Auriculoterapia/app/src/main/res/values/strings.xml
+++ b/Auriculoterapia/app/src/main/res/values/strings.xml
@@ -61,6 +61,6 @@
     <string name="str_nueva_contrase_a">Nueva Contraseña:</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="disponibilidad_seleccionar_dia">Seleccione el día:</string>
+    <string name="disponibilidad_seleccionar_dia">Seleccione\nel día:</string>
 
 </resources>
