Cambios en frontend

--- a/Auriculoterapia/app/src/main/res/values/strings.xml
+++ b/Auriculoterapia/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="disponibilidad_seleccionar_dia">Seleccione\nel día:</string>
+    <string name="tiempo_de_cada_terapia">Tiempo de\ncada terapia</string>
 
 </resources>
