Modificar, cancelar y finalizar cita, dashboards

--- a/Auriculoterapia/app/src/main/res/values/strings.xml
+++ b/Auriculoterapia/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <!--Mensajes de diálogo de validación-->
     <string name="no_puede_finalizar_cita">No puede finalizar la cita hasta su hora de fin</string>
     <string name="confirmacion_cancelar_cita">¿Seguro que desea cancelar la cita?</string>
+    <string name="confirmacion_modificar_cita">¿Seguro que desea modificar la cita?</string>
 
 </resources>
